remove card image fadein, fix wrong "next card" arrow rotation on mobile

--- a/css/card-info.css
+++ b/css/card-info.css
@@ -35,18 +35,6 @@ article {
     background-color: rgb(0, 0, 0);
     box-shadow: 0 0 15px 4px rgb(64, 64, 64);
     border-radius: 8px;
-    animation: fade_in .25s ease;
-    animation-fill-mode: forwards;
-    animation-iteration-count: 1;
-}
-
-@keyframes fade_in {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
 }
 
 .card-info {
@@ -158,7 +146,7 @@ nav abbr {
     height: 56px;
     width: 56px;
     transition: 0.4s;
-    rotate: 180deg;
+    transform: rotate(180deg);
 }
 
 #previous_card:hover, #next_card:hover {
